Git version of lab-python-flow-control

--- a/lab-python-functions.ipynb
+++ b/lab-python-functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d41071a2",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c86b0ff9",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c9d03b38",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0247cc8e",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "bc5a957d",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1c76e95e",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "3384d1b4",
    "metadata": {},
    "outputs": [
@@ -107,9 +107,11 @@
      "text": [
       "What product do you want to add to the list:tank\n",
       "Do you want to add more products to the list? yes/no yes\n",
-      "What product do you want to add to the list:car\n",
+      "What product do you want to add to the list:airship\n",
       "Do you want to add more products to the list? yes/no yes\n",
-      "What product do you want to add to the list:dog\n",
+      "What product do you want to add to the list:village idiot\n",
+      "Do you want to add more products to the list? yes/no yes\n",
+      "What product do you want to add to the list:clone of github!\n",
       "Do you want to add more products to the list? yes/no no\n",
       "How many t-shirt are there: 12\n",
       "How many mug are there: 12\n",
@@ -117,33 +119,39 @@
       "How many book are there: 12\n",
       "How many keychain are there: 12\n",
       "How many tank are there: 12\n",
-      "How many car are there: 12\n",
-      "How many dog are there: 12\n",
-      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'car', 'dog']\n",
-      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'car', 'dog']\n",
-      "Choose one of these following items: dog\n",
-      "You choose: dog\n",
+      "How many airship are there: 12\n",
+      "How many village idiot are there: 12\n",
+      "How many clone of github! are there: 12\n",
+      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'airship', 'village idiot', 'clone of github!']\n",
+      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'airship', 'village idiot', 'clone of github!']\n",
+      "Choose one of these following items: book\n",
+      "You choose: book\n",
       "Do you want to keep on buying?  y/n y\n",
-      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'car', 'dog']\n",
-      "Choose one of these following items: car\n",
-      "You choose: car\n",
+      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'airship', 'village idiot', 'clone of github!']\n",
+      "Choose one of these following items: airship\n",
+      "You choose: airship\n",
       "Do you want to keep on buying?  y/n y\n",
-      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'car', 'dog']\n",
-      "Choose one of these following items: hat\n",
-      "You choose: hat\n",
+      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'airship', 'village idiot', 'clone of github!']\n",
+      "Choose one of these following items: village idiot\n",
+      "You choose: village idiot\n",
+      "Do you want to keep on buying?  y/n y\n",
+      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'airship', 'village idiot', 'clone of github!']\n",
+      "Choose one of these following items: clone of github!\n",
+      "You choose: clone of github!\n",
       "Do you want to keep on buying?  y/n n\n",
-      "Thank you for purchasing: {'car', 'hat', 'dog'}\n",
-      "Percentage of customer order 37.5 %\n",
-      "{'car', 'hat', 'dog'}\n",
-      "37.5\n",
+      "Thank you for purchasing: {'clone of github!', 'village idiot', 'book', 'airship'}\n",
+      "Percentage of customer order 44.44444444444444 %\n",
+      "{'clone of github!', 'village idiot', 'book', 'airship'}\n",
+      "44.44444444444444\n",
       "Inventory of t-shirt is:  12\n",
       "Inventory of mug is:  12\n",
-      "Inventory of hat is:  11\n",
-      "Inventory of book is:  12\n",
+      "Inventory of hat is:  12\n",
+      "Inventory of book is:  11\n",
       "Inventory of keychain is:  12\n",
       "Inventory of tank is:  12\n",
-      "Inventory of car is:  11\n",
-      "Inventory of dog is:  11\n"
+      "Inventory of airship is:  11\n",
+      "Inventory of village idiot is:  11\n",
+      "Inventory of clone of github! is:  11\n"
      ]
     },
     {
@@ -152,7 +160,7 @@
        "11"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,62 +179,6 @@
    "cell_type": "markdown",
    "id": "26625006",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1468823",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba6dde8b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52aa85e7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39908b99",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff516554",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a8c0702",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ff6aea7",
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
