--- a/ab-python-flow-control.ipynb
+++ b/ab-python-flow-control.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d41071a2",
    "metadata": {},
    "outputs": [],
@@ -24,42 +24,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c86b0ff9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_customer_orders():\n",
+    "def get_customer_orders(products):\n",
     "    customer_orders = set()\n",
-    "    #here we are creating a loop so the customer can choose several products but we can´t choose multiple products since the customer_orders list is a set so for now we just create a simple loop and we update the list of the set\n",
-    "    seguir = \"y\" #start of loop \"condition first\"\n",
-    "    while seguir == \"y\": #checking what the condition of the loop is\n",
-    "        print(products) #we need the list of the available products from which the customer can choose from\n",
-    "        order = input(\"Choose one of these following items: \") #we ask the customer to choose one of the items \n",
-    "        print(\"You choose:\", order) #we confirm what he chose\n",
-    "        customer_orders.add(order) #we add said order to the customer_orders set\n",
-    "        seguir = input(\"Do you want to keep on buying?  y/n \", ) #we ask the customer if he wants to continue choosing y = loop starts again n = we continue with the next line of code\n",
-    "    else: \n",
-    "        print(\"Thank you for purchasing:\", customer_orders) #we display the customer_orders list with a thank you message\n",
-    "    return customer_orders"
+    "    seguir = \"y\" \n",
+    "    while seguir.lower() == \"y\": \n",
+    "        print(products) \n",
+    "        order = input(\"Choose one of the following items: \") \n",
+    "        if order in products:  # Check if the chosen product is available\n",
+    "            print(\"You chose:\", order) #we confirm what he chose\n",
+    "            customer_orders.add(order) #we add said order to the customer_orders set\n",
+    "            seguir = input(\"Do you want to keep on buying?  y/n \") #we display the customer_orders list with a thank you message\n",
+    "        else:\n",
+    "            print(\"Sorry, '{}' is not available. Please choose another product\".format(order))\n",
+    "    print(\"Thank you for purchasing:\", customer_orders) \n",
+    "    return customer_orders\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c9d03b38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_inventory(customer_orders, inventory):\n",
+    "    for product in customer_orders:\n",
+    "        if product in inventory:  \n",
+    "            inventory[product] -= 1  # Update the inventory\n",
+    "        else:\n",
+    "            print(\"Warning: '{}' is not in the inventory.\".format(product))\n",
+    "    return inventory\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c9d03b38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def update_inventory(customer_orders, products):\n",
-    "    for x in customer_orders:\n",
-    "        inventory[x] -= 1\n",
-    "    return inventory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "0247cc8e",
    "metadata": {},
    "outputs": [],
@@ -72,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "bc5a957d",
    "metadata": {},
    "outputs": [],
@@ -84,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "1c76e95e",
    "metadata": {},
    "outputs": [],
@@ -107,57 +111,45 @@
      "text": [
       "What product do you want to add to the list:tank\n",
       "Do you want to add more products to the list? yes/no yes\n",
-      "What product do you want to add to the list:airship\n",
-      "Do you want to add more products to the list? yes/no yes\n",
-      "What product do you want to add to the list:village idiot\n",
-      "Do you want to add more products to the list? yes/no yes\n",
-      "What product do you want to add to the list:clone of github!\n",
+      "What product do you want to add to the list:flower\n",
       "Do you want to add more products to the list? yes/no no\n",
       "How many t-shirt are there: 12\n",
       "How many mug are there: 12\n",
       "How many hat are there: 12\n",
-      "How many book are there: 12\n",
-      "How many keychain are there: 12\n",
-      "How many tank are there: 12\n",
-      "How many airship are there: 12\n",
-      "How many village idiot are there: 12\n",
-      "How many clone of github! are there: 12\n",
-      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'airship', 'village idiot', 'clone of github!']\n",
-      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'airship', 'village idiot', 'clone of github!']\n",
-      "Choose one of these following items: book\n",
-      "You choose: book\n",
+      "How many book are there: 1\n",
+      "How many keychain are there: 2\n",
+      "How many tank are there: 1\n",
+      "How many flower are there: 2\n",
+      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'flower']\n",
+      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'flower']\n",
+      "Choose one of the following items: flower\n",
+      "You chose: flower\n",
       "Do you want to keep on buying?  y/n y\n",
-      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'airship', 'village idiot', 'clone of github!']\n",
-      "Choose one of these following items: airship\n",
-      "You choose: airship\n",
+      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'flower']\n",
+      "Choose one of the following items: tank\n",
+      "You chose: tank\n",
       "Do you want to keep on buying?  y/n y\n",
-      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'airship', 'village idiot', 'clone of github!']\n",
-      "Choose one of these following items: village idiot\n",
-      "You choose: village idiot\n",
-      "Do you want to keep on buying?  y/n y\n",
-      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'airship', 'village idiot', 'clone of github!']\n",
-      "Choose one of these following items: clone of github!\n",
-      "You choose: clone of github!\n",
+      "['t-shirt', 'mug', 'hat', 'book', 'keychain', 'tank', 'flower']\n",
+      "Choose one of the following items: book\n",
+      "You chose: book\n",
       "Do you want to keep on buying?  y/n n\n",
-      "Thank you for purchasing: {'clone of github!', 'village idiot', 'book', 'airship'}\n",
-      "Percentage of customer order 44.44444444444444 %\n",
-      "{'clone of github!', 'village idiot', 'book', 'airship'}\n",
-      "44.44444444444444\n",
+      "Thank you for purchasing: {'book', 'tank', 'flower'}\n",
+      "Percentage of customer order 42.857142857142854 %\n",
+      "{'book', 'tank', 'flower'}\n",
+      "42.857142857142854\n",
       "Inventory of t-shirt is:  12\n",
       "Inventory of mug is:  12\n",
       "Inventory of hat is:  12\n",
-      "Inventory of book is:  11\n",
-      "Inventory of keychain is:  12\n",
-      "Inventory of tank is:  12\n",
-      "Inventory of airship is:  11\n",
-      "Inventory of village idiot is:  11\n",
-      "Inventory of clone of github! is:  11\n"
+      "Inventory of book is:  0\n",
+      "Inventory of keychain is:  2\n",
+      "Inventory of tank is:  0\n",
+      "Inventory of flower is:  1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "11"
+       "1"
       ]
      },
      "execution_count": 8,
@@ -168,7 +160,7 @@
    "source": [
     "products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
     "inventory = initialize_inventory(products)\n",
-    "customer_orders = get_customer_orders()\n",
+    "customer_orders = get_customer_orders(products)\n",
     "update_inventory(customer_orders, inventory)\n",
     "order_statistics = calculate_order_statistics(customer_orders, products)\n",
     "print_order_statistics(order_statistics)\n",
